# tde-cpd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFTW.cmake  FindFlann.cmake
datasets/gatech_honeybee/: README.md  readme.md  readme.txt
include/rlfd/: DHMMSegmenter.hh  DelayEmbedding.hh  GammaTest.hh  Model.hh  UnbiasedMultipleAutocorrelation.hh
include/rlfd/delay/: AutomatedEmbedding.hh  AverageDisplacement.hh  DelayEmbedding.hh  GammaTest.hh  GeometricTemplateMatching.hh  IncreasingEmbedding.hh  SquaredAverageDisplacement.hh  SquaredAverageDistance.hh  UnbiasedMultipleAutocorrelation.hh
include/rlfd/segment/: CSegmentation.hh  DHMMSegmenter.hh  KohlmorgenLemm.hh  LowerIntersection.hh  NSegmentation.hh
include/rlfd/stats/: GaussianDensityEstimator.hh
include/rlfd/utils/: Gnuplot.hh  ImportExport.hh  Matio.hh  Matrixio.hh  ReadDir.hh  ReadFile.hh  Tabulario.hh
include/rlfd_segmentation/: DHMMSegmenter.hh  DelayEmbedding.hh  GammaTest.hh  Model.hh  UnbiasedMultipleAutocorrelation.hh
include/rlfd_segmentation/utils/: AutoCorrelation.hh  Autocorrelation.hh  Gnuplot.hh  Matio.hh
meta/: create-cmd.sh  create-header  create-header.sh
scripts/: plot_trajectory.py
scripts/gatech_honeybee/: plot_theta.r  plot_trajectory.py  plot_trajectory.r
scripts/mackey_glass/: mackey-glass.r  mackeyglass.r  switching-mackey-glass.r
scripts/sst/: make_hankel.m  msstpinball.m  sstdistance.m
src/: Autocorrelation.cc  AutomatedEmbedding.cc  AverageDisplacement.cc  BuildKdTree.cc  CSegmentation.cc  CatMat.cc  DHMMSegmenter.cc  DelayEmbedding.cc  GammaTest.cc  GaussianKDE.cc  GeometricTemplateMatching.cc  IncreasingEmbedding.cc  KohlmorgenLemm.cc  Lorenz.cc  LowerIntersection.cc  MatToDat.cc  NSegmentation.cc  RunAverageDisplacement.cc  RunSegmentation.cc  TestAutoCorrelation.cc  TimeSeriesSegmentation.cc
